care/force-app/main/default/objects/Survey_Feedback__c/fields/QA_Status__c.field-meta.xml
<CustomField>
    <fullName>QA_Status__c</fullName>
    <description>Status to track the QA Process for LifeCare Survey.</description>
    <label>QA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>In-Process</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>