care/force-app/main/default/objects/Survey_Feedback__c/fields/Rate_your_satisfaction_with_your_caregiv__c.field-meta.xml
<CustomField>
    <fullName>Rate_your_satisfaction_with_your_caregiv__c</fullName>
    <description>How would you rate your satisfaction with your caregiver?</description>
    <inlineHelpText>How would you rate your satisfaction with your caregiver?</inlineHelpText>
    <label>Rate your satisfaction with caregiver</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Extremely Satisfied</fullName>
            </value>
            <value>
                <fullName>Somewhat Satisfied</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Somewhat Dissatisfied</fullName>
            </value>
            <value>
                <fullName>Extremely Dissatisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>