care/force-app/main/default/objects/Survey_Feedback__c/fields/Rating_comments__c.field-meta.xml
<CustomField>
    <fullName>Rating_comments__c</fullName>
    <complianceGroup>CCPA</complianceGroup>
    <description>Can you tell us why you’ve chosen the ratings above?</description>
    <inlineHelpText>Can you tell us why you’ve chosen the ratings above?</inlineHelpText>
    <label>Rating comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>