care/force-app/main/default/objects/Survey_Feedback__c/fields/Recommendation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Comments__c</fullName>
    <description>Please tell us why you’ve chosen this rating above and share any additional feedback regarding the Caregiver Roundtable at Harvard Business School?  Field not used in Process Builder for VOC. SFORCE-1774</description>
    <inlineHelpText>Please tell us why you’ve chosen this rating above and share any additional feedback regarding the Caregiver Roundtable at Harvard Business School?</inlineHelpText>
    <label>Recommendation Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>