care/force-app/main/default/objects/Survey_Feedback__c/fields/Recommendation_Score__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Score__c</fullName>
    <description>How likely are you to recommend Care@Work’s Caregiver Roundtable to a colleague? (Clone of NPS Score, Field is not used for Process builder) SFORCE-1774</description>
    <inlineHelpText>How likely are you to recommend Care@Work’s Caregiver Roundtable to a colleague?</inlineHelpText>
    <label>Recommendation Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>