care/force-app/main/default/objects/Survey_Feedback__c/fields/Revised_Overall_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Revised_Overall_Satisfaction__c</fullName>
    <description>Please select/identify/Modify/Revised the dissatisfaction reasons, Related to LifeCare QA process.</description>
    <inlineHelpText>Please select/identify/Modify/Revised the dissatisfaction reasons, Related to LifeCare QA process.</inlineHelpText>
    <label>Revised Overall Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Out of Scope</fullName>
            </value>
            <value>
                <fullName>Entered in Error</fullName>
            </value>
            <value>
                <fullName>Rated Partner/Vendor</fullName>
            </value>
            <value>
                <fullName>Rated Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>