care/force-app/main/default/objects/Survey_Feedback__c/fields/Satisfaction_Comments__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_Comments__c</fullName>
    <complianceGroup>CCPA</complianceGroup>
    <description>Comments about the Satisfaction Rating. Also used for BUC US Surveys: SFORCE-2425</description>
    <inlineHelpText>Comments about the Satisfaction Rating. BUC US Survey Question: Is there anything else you would like to tell us about our services?</inlineHelpText>
    <label>Satisfaction Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>