care/force-app/main/default/objects/Survey_Feedback__c/fields/Satisfaction_Rating__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_Rating__c</fullName>
    <complianceGroup>CCPA</complianceGroup>
    <description>Added for SFORCE-1774. Synced w Clicktools. Used for Satisfaction Rating apart from CSAT. Also used for BUC Surveys SFORCE-2425</description>
    <inlineHelpText>BUC Survey Question: How would you rate your overall satisfaction with our Backup Care Service?</inlineHelpText>
    <label>Satisfaction Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Extremely Satisfied</fullName>
            </value>
            <value>
                <fullName>Somewhat Satisfied</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Somewhat Dissatisfied</fullName>
            </value>
            <value>
                <fullName>Extremely Dissatisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>