care/force-app/main/default/objects/Survey_Feedback__c/fields/Suggestions_for_enhancing_service__c.field-meta.xml
<CustomField>
    <fullName>Suggestions_for_enhancing_service__c</fullName>
    <complianceGroup>CCPA</complianceGroup>
    <description>added for SFORCE-2425 BUC Surveys</description>
    <inlineHelpText>Q: Please share your suggestions for how we might enhance our service.</inlineHelpText>
    <label>Suggestions to enhance our service</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>