care/force-app/main/default/objects/Survey_Feedback__c/fields/Suggests_Ideas__c.field-meta.xml
<CustomField>
    <fullName>Suggests_Ideas__c</fullName>
    <label>Suggests Ideas?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>