care/force-app/main/default/objects/Survey_Feedback__c/fields/Support_Experience_Comments__c.field-meta.xml
<CustomField>
    <fullName>Support_Experience_Comments__c</fullName>
    <description>How could we have improved your support experience?</description>
    <inlineHelpText>How could we have improved your support experience?</inlineHelpText>
    <label>Support Experience Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>