care/force-app/main/default/objects/Survey_Feedback__c/fields/Survey_Catcher__c.field-meta.xml
<CustomField>
    <fullName>Survey_Catcher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User Lookup for the system user, that catches errors, while creating a task from the clicktools survey. If the user is a queue the task creation will fail.</description>
    <inlineHelpText>This field is set by the &apos;I Am Not satisfied - create a case task&apos; - Process</inlineHelpText>
    <label>Survey Catcher</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Survey_Feedbacks_Catcher</relationshipName>
    <type>Lookup</type>
</CustomField>