care/force-app/main/default/objects/Survey_Feedback__c/fields/Survey_Catcher_User__c.field-meta.xml
<CustomField>
    <fullName>Survey_Catcher_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This User will be used to catch Survey responses, when the case owner is a queue instead of a user. With a queue as case owner, tasks can not be created.</description>
    <label>Survey Catcher User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Survey_Feedback_Survey_Catcher</relationshipName>
    <type>Lookup</type>
</CustomField>