care/force-app/main/default/objects/Survey_Feedback__c/fields/Survey_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Survey_Member_ID__c</fullName>
    <label>Survey Member ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>