care/force-app/main/default/objects/Survey_Feedback__c/fields/Survey_Member_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Survey_Member_ID_Number__c</fullName>
    <description>Converts the Survey Member ID (Text format) into a Number format for comparism, SFORCE-2425</description>
    <formula>VALUE(Survey_Member_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Survey Member ID in Number format</inlineHelpText>
    <label>Survey Member ID Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>