care/force-app/main/default/objects/Survey_Feedback__c/fields/Survey_Response__c.field-meta.xml
<CustomField>
    <fullName>Survey_Response__c</fullName>
    <description>Survey Response Link to Clicktools</description>
    <label>Survey Response</label>
    <type>Url</type>
</CustomField>