care/force-app/main/default/objects/Survey_Feedback__c/fields/Tell_us_about_your_Caregiver__c.field-meta.xml
<CustomField>
    <fullName>Tell_us_about_your_Caregiver__c</fullName>
    <description>Is there anything you&apos;d like to tell us about your caregiver?</description>
    <inlineHelpText>Is there anything you&apos;d like to tell us about your caregiver</inlineHelpText>
    <label>Tell us about your Caregiver</label>
    <type>TextArea</type>
</CustomField>