care/force-app/main/default/objects/Survey_Feedback__c/fields/Tell_us_the_center_used_for_Backup_Care__c.field-meta.xml
<CustomField>
    <fullName>Tell_us_the_center_used_for_Backup_Care__c</fullName>
    <label>Tell us the center used for Backup Care</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>