care/force-app/main/default/objects/Survey_Feedback__c/fields/Text_Translation__c.field-meta.xml
<CustomField>
    <fullName>Text_Translation__c</fullName>
    <complianceGroup>CCPA</complianceGroup>
    <label>Text Translation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>