care/force-app/main/default/objects/Survey_Feedback__c/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <label>Theme</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Ability to Apply to Jobs</fullName>
            </value>
            <value>
                <fullName>Able to post specific needs</fullName>
            </value>
            <value>
                <fullName>Above and beyond</fullName>
            </value>
            <value>
                <fullName>Account Approval</fullName>
            </value>
            <value>
                <fullName>Account Navigation</fullName>
            </value>
            <value>
                <fullName>Account Settings Navigation</fullName>
            </value>
            <value>
                <fullName>Account Sharing</fullName>
            </value>
            <value>
                <fullName>Account Verification</fullName>
            </value>
            <value>
                <fullName>Accuracy of Job Posting</fullName>
            </value>
            <value>
                <fullName>Accuracy of Profile</fullName>
            </value>
            <value>
                <fullName>Accuracy of Results</fullName>
            </value>
            <value>
                <fullName>Add a Service Profile</fullName>
            </value>
            <value>
                <fullName>Add-Ons</fullName>
            </value>
            <value>
                <fullName>Affordable</fullName>
            </value>
            <value>
                <fullName>Age</fullName>
            </value>
            <value>
                <fullName>Age of Applicant</fullName>
            </value>
            <value>
                <fullName>Alerts</fullName>
            </value>
            <value>
                <fullName>Amount of Caregivers in Area</fullName>
            </value>
            <value>
                <fullName>Amount of Reviews/Review on Seekers</fullName>
            </value>
            <value>
                <fullName>App Lacks Features</fullName>
            </value>
            <value>
                <fullName>Applicant Certification</fullName>
            </value>
            <value>
                <fullName>Apply with Credits</fullName>
            </value>
            <value>
                <fullName>App Not User Friendly</fullName>
            </value>
            <value>
                <fullName>Approval Guidelines</fullName>
            </value>
            <value>
                <fullName>Approval takes too long</fullName>
            </value>
            <value>
                <fullName>App User Friendly</fullName>
            </value>
            <value>
                <fullName>Audio of Agent</fullName>
            </value>
            <value>
                <fullName>Auto Jobs</fullName>
            </value>
            <value>
                <fullName>Availability calendar is hard to use</fullName>
            </value>
            <value>
                <fullName>Availability not accurate/updated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>