care/force-app/main/default/objects/Survey_Feedback__c/fields/Topic_1__c.field-meta.xml
<CustomField>
    <fullName>Topic_1__c</fullName>
    <label>Topic 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>