care/force-app/main/default/objects/Survey_Feedback__c/fields/Topic_2__c.field-meta.xml
<CustomField>
    <fullName>Topic_2__c</fullName>
    <label>Topic 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>