care/force-app/main/default/objects/Survey_Feedback__c/fields/Topic_3__c.field-meta.xml
<CustomField>
    <fullName>Topic_3__c</fullName>
    <label>Topic 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>