care/force-app/main/default/objects/Survey_Feedback__c/fields/Unfavorable_Comments_Translated__c.field-meta.xml
<CustomField>
    <fullName>Unfavorable_Comments_Translated__c</fullName>
    <description>Text Translation of Agent experience unfavorable</description>
    <label>Unfavorable Comments Translated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>