care/force-app/main/default/objects/Survey_Feedback__c/fields/Use_service_again__c.field-meta.xml
<CustomField>
    <fullName>Use_service_again__c</fullName>
    <label>Use service again?</label>
    <length>40</length>
    <type>Text</type>
</CustomField>