care/force-app/main/default/objects/Survey_Feedback__c/fields/User_Rating_Clear_Explanation__c.field-meta.xml
<CustomField>
    <fullName>User_Rating_Clear_Explanation__c</fullName>
    <complianceGroup>CCPA</complianceGroup>
    <label>User Rating - Clear Explanation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Somewhat Agree</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Somewhat Disagree</fullName>
            </value>
            <value>
                <fullName>Disagree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>