care/force-app/main/default/objects/Survey_Feedback__c/fields/User_Rating_Comments__c.field-meta.xml
<CustomField>
    <fullName>User_Rating_Comments__c</fullName>
    <label>User Rating Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>