care/force-app/main/default/objects/Survey_Feedback__c/fields/User_Rating_Knowledge_Num__c.field-meta.xml
<CustomField>
    <fullName>User_Rating_Knowledge_Num__c</fullName>
    <formula>CASE(User_Rating_Knowledge__c,
&quot;Agree&quot;, 5,
&quot;Somewhat Agree&quot;, 4,
&quot;Neutral&quot;, 3,
&quot;Somewhat Disagree&quot;, 2,
&quot;Disagree&quot;, 1, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Created for Senior Care Planning Surveys.</inlineHelpText>
    <label>User Rating - Knowledge (#)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>