care/force-app/main/default/objects/Survey_Feedback__c/fields/Vertical_Specific__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Specific__c</fullName>
    <label>Vertical Specific?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Child Care</fullName>
            </value>
            <value>
                <fullName>Pet Care</fullName>
            </value>
            <value>
                <fullName>Housekeeping</fullName>
            </value>
            <value>
                <fullName>Tutoring</fullName>
            </value>
            <value>
                <fullName>Senior Care</fullName>
            </value>
            <value>
                <fullName>Special Needs</fullName>
            </value>
            <value>
                <fullName>Errands Odd Jobs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>