care/force-app/main/default/objects/Survey_Feedback__c/fields/Want_team_contact__c.field-meta.xml
<CustomField>
    <fullName>Want_team_contact__c</fullName>
    <complianceGroup>CCPA</complianceGroup>
    <description>added for SFORCE-2425 BUC Surveys</description>
    <inlineHelpText>Q: Would you like a member of our team to contact you about any questions or concerns you may have?</inlineHelpText>
    <label>Would you like our team to contact you?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>