care/force-app/main/default/objects/Survey_Feedback__c/fields/Wants_Help__c.field-meta.xml
<CustomField>
    <fullName>Wants_Help__c</fullName>
    <label>Wants Help?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>