care/force-app/main/default/objects/Survey_Feedback__c/fields/Why_prefer_type_of_care__c.field-meta.xml
<CustomField>
    <fullName>Why_prefer_type_of_care__c</fullName>
    <description>added for SFORCE-2425 BUC Surveys</description>
    <inlineHelpText>Q: Why do you prefer that type of care? Choose the most important attribute. Relates to Preference utilizing BUC.</inlineHelpText>
    <label>Why do you prefer that type of care?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Socialization with others</fullName>
            </value>
            <value>
                <fullName>Time flexibility</fullName>
            </value>
            <value>
                <fullName>Multiple children</fullName>
            </value>
            <value>
                <fullName>Accomodates sick child</fullName>
            </value>
            <value>
                <fullName>1-on-1 care</fullName>
            </value>
            <value>
                <fullName>Distance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>