care/force-app/main/default/objects/Survey_Feedback__c/fields/Would_you_use_service_again_Y_N_Why__c.field-meta.xml
<CustomField>
    <fullName>Would_you_use_service_again_Y_N_Why__c</fullName>
    <label>Would you use service again - Y/N &amp; Why</label>
    <type>TextArea</type>
</CustomField>