care/force-app/main/default/objects/Survey_Feedback__c/recordTypes/Assisted_Search_Survey.recordType-meta.xml
<RecordType>
    <fullName>Assisted_Search_Survey</fullName>
    <active>true</active>
    <label>Assisted Search Survey</label>
</RecordType>