care/force-app/main/default/objects/Survey_Feedback__c/recordTypes/Assisted_Search_Survey_Provider.recordType-meta.xml
<RecordType>
    <fullName>Assisted_Search_Survey_Provider</fullName>
    <active>true</active>
    <label>Assisted Search Survey - Provider</label>
</RecordType>