care/force-app/main/default/objects/Survey_Feedback__c/recordTypes/BUC_US_Surveys.recordType-meta.xml
<RecordType>
    <fullName>BUC_US_Surveys</fullName>
    <active>true</active>
    <description>for BUC Fullfilled, Unfilled and Micro Services</description>
    <label>BUC US Surveys</label>
</RecordType>