care/force-app/main/default/objects/Survey_Feedback__c/recordTypes/Expert_Assist_Survey_Feedback.recordType-meta.xml
<RecordType>
    <fullName>Expert_Assist_Survey_Feedback</fullName>
    <active>true</active>
    <description>New recordtype Expert_Assist_Survey_Feedback  for Automation</description>
    <label>Expert Assist Survey Feedback</label>
</RecordType>