care/force-app/main/default/objects/Survey_Feedback__c/recordTypes/Int_WPS_Surveys.recordType-meta.xml
<RecordType>
    <fullName>Int_WPS_Surveys</fullName>
    <active>true</active>
    <description>Feedback Survey for the Intl. WPS Ops team</description>
    <label>Int. WPS Surveys</label>
</RecordType>