care/force-app/main/default/objects/Survey_Feedback__c/recordTypes/International_CFB_Surveys.recordType-meta.xml
<RecordType>
    <fullName>International_CFB_Surveys</fullName>
    <active>true</active>
    <label>International CFB Surveys</label>
</RecordType>