care/force-app/main/default/objects/Survey_Feedback__c/recordTypes/IT_Fraud_Survey.recordType-meta.xml
<RecordType>
    <fullName>IT_Fraud_Survey</fullName>
    <active>true</active>
    <description>Security/IT/Safety teams launching a Fraud Follow up survey to capture additional information on cases where the member has reported fraud.  Sforce - 1634</description>
    <label>IT Fraud Survey</label>
</RecordType>