care/force-app/main/default/objects/Survey_Feedback__c/recordTypes/LifeCare_Case_Survey.recordType-meta.xml
<RecordType>
    <fullName>LifeCare_Case_Survey</fullName>
    <active>true</active>
    <label>LifeCare Case Survey</label>
</RecordType>