care/force-app/main/default/objects/Survey_Feedback__c/recordTypes/Member_Care_Case_Survey.recordType-meta.xml
<RecordType>
    <fullName>Member_Care_Case_Survey</fullName>
    <active>true</active>
    <label>Member Care Case Survey</label>
</RecordType>