care/force-app/main/default/objects/Survey_Feedback__c/recordTypes/Member_Surveys.recordType-meta.xml
<RecordType>
    <fullName>Member_Surveys</fullName>
    <active>true</active>
    <description>CRM Triggered Surveys</description>
    <label>Member Surveys</label>
</RecordType>