care/force-app/main/default/objects/Survey_Feedback__c/recordTypes/Senior_Care_Case_Survey.recordType-meta.xml
<RecordType>
    <fullName>Senior_Care_Case_Survey</fullName>
    <active>true</active>
    <label>Senior Care Case Survey</label>
</RecordType>