care/force-app/main/default/objects/Survey_Feedback__c/recordTypes/Senior_Care_Event_Survey.recordType-meta.xml
<RecordType>
    <fullName>Senior_Care_Event_Survey</fullName>
    <active>true</active>
    <description>Used for Clicktools Senior Care Event Survey. SFORCE-1774.</description>
    <label>Senior Care Event Survey</label>
</RecordType>