care/force-app/main/default/objects/Survey_Feedback__c/recordTypes/Senior_Care_Provider_Feedback_Survey.recordType-meta.xml
<RecordType>
    <fullName>Senior_Care_Provider_Feedback_Survey</fullName>
    <active>true</active>
    <description>Used for Clicktools Senior Care Provider Feedback Survey. SFORCE-1821</description>
    <label>Senior Care Provider Feedback Survey</label>
</RecordType>