care/force-app/main/default/objects/Survey_Feedback__c/recordTypes/Senior_Care_Survey_feedback.recordType-meta.xml
<RecordType>
    <fullName>Senior_Care_Survey_feedback</fullName>
    <active>true</active>
    <description>New recordtype Senior Care Survey feedback for Automation</description>
    <label>Senior Care Survey feedback</label>
</RecordType>