care/force-app/main/default/objects/Survey_Feedback__c/validationRules/LifeCare_Case_Dissatisfaction_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>LifeCare_Case_Dissatisfaction_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND((RecordType.Name = &quot;LifeCare Case Survey&quot;),
     NOT(ISPICKVAL(Revised_Overall_Satisfaction__c, &apos;&apos;)),
     ISBLANK(QA_Review_Comments__c)
)</errorConditionFormula>
    <errorDisplayField>QA_Review_Comments__c</errorDisplayField>
    <errorMessage>Please Add the QA Review Comments</errorMessage>
</ValidationRule>