care/force-app/main/default/objects/Survey_Feedback__c/validationRules/QA_review_Comments_Needed.validationRule-meta.xml
<ValidationRule>
    <fullName>QA_review_Comments_Needed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(RecordType.DeveloperName = &quot;Expert_Assist_Survey_Feedback&quot;,
       RecordType.DeveloperName = &quot;Senior_Care_Survey_feedback&quot;),
    OR(Overall_satisfaction__c =&apos;Dissatisfied&apos;,Overall_satisfaction__c =&apos;Very Dissatisfied&apos;),
       ISBLANK(QA_Review_Comments__c) 
)</errorConditionFormula>
    <errorDisplayField>QA_Review_Comments__c</errorDisplayField>
    <errorMessage>Please Add the QA Review Comments</errorMessage>
</ValidationRule>